# real_sense_demos

./: README.md  get_background_model.py  utils.cpp  utils.hpp
Untitled Folder/: Untitled.ipynb
Untitled Folder/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
bg_sub/: CMakeLists.txt  bg_sub.cpp
capture/: CMakeLists.txt  capture.cpp
capture_play/: CMakeLists.txt  capture_play.cpp
extract_bg_model/: CMakeLists.txt  extract_bg.cpp
multi-level-segmentation/: CMakeLists.txt  multi_seg.cpp
openni/: display_data.py
water_fill_seg/: CMakeLists.txt  utils.cpp  utils.hpp  water_fill_seg.cpp  water_filling.cpp  water_filling.hpp
